<resources>
    <string name="app_name">Health Care</string>
    <string name="text1">Create Account</string>

    <string name="acc1">Name : </string>
    <string name="acc2">Mobile Number : </string>
    <string name="acc4">Address : </string>
    <string name="acc5">Email</string>
    <string name="acc6">Password</string>
    <string name="acc7">Confirm Password</string>
    <string name="check1"> </string>
    <string name="checkT">I agree to the Terms of Services and Pricy Policy.</string>
    <string name="accbt">CONFIRM</string>

    <string name="Mac1">My Account</string>
    <string name="Macc2">Name</string>
    <string name="Macc3">Mobile Number</string>
    <string name="Macc4">Address</string>
    <string name="Macc5">E mail</string>
    <string name="Bt1">Update</string>
    <string name="Bt2">Delete</string>
    <string name="Bt3">Done</string>
    <string name="UpT1">Update</string>

    <string name="T1">Name</string>
    <string name="T2">Mobile Number</string>
    <string name="T3">Address</string>
    <string name="T4">Email</string>
    <string name="T5">Password</string>

    <string name="Bup1">Update</string>
    <string name="Td1">Delete</string>
    <string name="D1">Name</string>
    <string name="D2">Email</string>
    <string name="D3">Password</string>
    <string name="BD1">Delete</string>
</resources>